# gisolate

./: .gitignore  CLAUDE.md  LICENSE  README.md  lefthook.yml  pyproject.toml
src/gisolate/: __init__.py  _hub.py  _internal.py  _workers.py  bridge.py  hub.py  local.py  proxy.py  pubsub.py  subprocess.py
tests/: conftest.py  helpers.py  test_bridge.py  test_hub.py  test_internal.py  test_local.py  test_proxy.py  test_pubsub.py  test_subprocess.py  test_workers.py
tests/bdd/: test_proxy.py  test_serialization.py  test_subprocess.py  test_thread_local.py
tests/bdd/features/: process_proxy.feature  serialization.feature  subprocess_run.feature  thread_local.feature
