[project]
name = "gisolate"
version = "0.1.0"
description = "Process isolation for gevent applications"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "gevent>=24.0",
    "pyzmq>=26.0",
    "dill>=0.3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gisolate"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.6.4",
    "isort>=5.13.2",
    "pytest-mock>=3.14.0",
    "pyright>=1.1.407",
    "vulture>=2.14",
    "pytest-bdd>=8.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
bdd_features_base_dir = "tests/bdd/features/"

